--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-MONGODB_URL=mongodb+srv://PlantInProject:lzfJduDbfukbRm5m@cluster0.ngro3nl.mongodb.net/?retryWrites=true&w=majority
-CLOUDINARY_CLOUD_NAME=dbcy4xepe
-CLOUDINARY_API_KEY=966231756931155
-CLOUDINARY_API_SECRET=6gklWCZP9doauA_vvetElffrvxo
+MONGODB_URL=""
+CLOUDINARY_CLOUD_NAME=""
+CLOUDINARY_API_KEY=""
+CLOUDINARY_API_SECRET=""
